After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 719328 - [IMAPx] Fails to update folder content with QResync
[IMAPx] Fails to update folder content with QResync
Status: RESOLVED FIXED
Product: evolution
Classification: Applications
Component: Mailer
3.12.x (obsolete)
Other Linux
: Normal normal
: ---
Assigned To: evolution-mail-maintainers
Evolution QA team
Depends on:
Blocks:
 
 
Reported: 2013-11-26 07:04 UTC by Yves-Alexis Perez
Modified: 2018-12-07 11:54 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Yves-Alexis Perez 2013-11-26 07:04:17 UTC
Hi,

I use an IMAP+ account with:

[x] check for new messages every 10 minutes
[x] check for new messages in all folders
[ ] check for new messages in subscribed folders
[x] use quick resync is server supports it
[x] listen for server changes notifications

The remote server is dovecot 2.1.7

Starting 3.10, the “check for new messages in all folders” seems broken. New mails in folders other than the currently selected don't appear until I change to those folders manually.

If you need more info, please ask.
Comment 1 Rick Stanley 2013-12-10 22:54:18 UTC
I also have this same problem.  My system is currently up to date. 

evolution 3.8.5

Linux linus 3.11-2-amd64 #1 SMP Debian 3.11.10-1 (2013-12-04) x86_64 GNU/Linux

Debian Jessie, running KDE

Please let me know if any other information is needed.  IMHO, this should be escalated both Priority, and Severity.

Please correct this problem ASAP.
Comment 2 Yves-Alexis Perez 2013-12-11 06:18:45 UTC
(In reply to comment #1)
> I also have this same problem.  My system is currently up to date. 
> 
> evolution 3.8.5

That looks like a different issue then, mine appeared in 3.10. Also note that 3.8 is *not* the latest upstream version, only the current one in Debian Jessie and sid.
Comment 3 Rick Stanley 2013-12-13 15:45:24 UTC
I only meant that MY installation was updated with the latest available Distro updates, not necessarily the latest upstream version available.  This may or may not be the same issue.

After the latest update this morning, it started updating the Inbox again as it should, so my evolution installation is now back to normal.  I was wondering the problem was with one or more of the support libraries.

The updates that were applied this morning were:

[UPGRADE] libmime-tools-perl:amd64 5.504-1 -> 5.505-1
[UPGRADE] libslang2:amd64 2.2.4-15 -> 2.2.4-16
[UPGRADE] libsoup-gnome2.4-1:amd64 2.44.1-1 -> 2.44.2-1
[UPGRADE] libsoup2.4-1:amd64 2.44.1-1 -> 2.44.2-1

I hope this helps correct your issue.
Comment 4 Yves-Alexis Perez 2013-12-13 18:40:38 UTC
(In reply to comment #3)
> I only meant that MY installation was updated with the latest available Distro
> updates, not necessarily the latest upstream version available.  This may or
> may not be the same issue.

Because it was not clear in my first message: it *worked* in 3.8, it brokes starting 3.10. And I'm actually using Debian sid, so more or less the same codebase…
Comment 5 Milan Crha 2014-02-06 15:18:21 UTC
Thanks for a bug report. I tried to reproduce this with to-be 3.10.4, also by adding a debug print into imapx_can_refresh_folder(), imapx_refresh_info_sync() and imapx_synchronize_sync() and I see all these being properly called and returning success from the later two and 'can' from the first. I even see updates under Inbox when I stay in other than that folder during an automatic check for messages.

I'm only wondering, whether this doesn't have to do anything with subscriptions. Do you have shown only subscribed folders, or all folders, are you subscribed to the other folder, or not (you can check in Folder->Subscriptions...). Mine server is fine with updates in unsubscribed folders, but maybe the Dovecot is not.

I also tested this with a dovecot 2.2.4, on which I added a new message to one of the subfolders from another machine, and this message had been shown (it was set as unread, thus the folder tree increased unread count on that particular folder) during automatic update, which I have set for 2 minutes for this account.

The only debugging would be to run evolution from console with
   CAMEL_DEBUG=imapx:io
which shows what the IMAPx does. There should be some UID FETCH lines which indicate an attempt to update folder content, the same way when you select the folder in UI.

Could you verify, and/or try anything from the above, please?
Comment 6 Yves-Alexis Perez 2014-03-31 09:53:05 UTC
Sorry for not replying sooner. I've upgraded to 3.12.0 recently and it seems the problem still exists apparently. Or maybe it's different, because in some cases, even changing to a new folder won't make the new message appear, and only a restart or an offline/online switch will do.

I'll try to provide the debugging infos asked.
Comment 7 Yves-Alexis Perez 2014-04-01 11:23:39 UTC
Ok, I do have some logs, but this might actually be a quite different issue, feel free to point me to another bug or open a new one.

My evolution is right now stuck, it won't refresh automatically. I've actually suspended my laptop this morning, then woke it up (the IP address changed since I changed network). I've set it to offline mode, then online mode manually, and the logs show it reconnected successfully to the server, but the auto refresh doesn't happen:

[imapx:D] I/O: '* OK [CAPABILITY IMAP4rev1 LITERAL+ SASL-IR LOGIN-REFERRALS ID ENABLE IDLE AUTH=PLAIN AUTH=LOGIN] Dovecot ready.
'
[imapx:D] I/O: 'D57726 LOGIN login@account password
'
[imapx:D] I/O: 'D57726 OK [CAPABILITY IMAP4rev1 LITERAL+ SASL-IR LOGIN-REFERRALS ID ENABLE IDLE SORT SORT=DISPLAY THREAD=REFERENCES THREAD=REFS MULTIAPPEND UNSELECT CHILDREN NAMESPACE UIDPLUS LIST-EXTENDED I18NLEVEL=1 CONDSTORE QRESYNC ESEARCH ESORT SEARCHRES WITHIN CONTEXT=SEARCH LIST-STATUS SPECIAL-USE] Logged in
'
[imapx:D] I/O: 'D57727 NAMESPACE
'
[imapx:D] I/O: '* NAMESPACE (("" ".")) NIL NIL
D57727 OK Namespace completed.
'
[imapx:D] I/O: 'D57728 ENABLE CONDSTORE QRESYNC
'
[imapx:D] I/O: '* ENABLED CONDSTORE QRESYNC
D57728 OK Enabled.


Now, if I change folders, logs reflect that, but I still don't have the new message appearing:

[imapx:D] I/O: 'D57729 STATUS admin (MESSAGES UNSEEN UIDVALIDITY UIDNEXT HIGHESTMODSEQ)
'
[imapx:D] I/O: '* STATUS "admin" (MESSAGES 16625 UIDNEXT 21988 UIDVALIDITY 1331939065 UNSEEN 2211 HIGHESTMODSEQ 4382)
D57729 OK Status completed.
'
[imapx:D] I/O: 'D57730 STATUS INBOX (MESSAGES UNSEEN UIDVALIDITY UIDNEXT HIGHESTMODSEQ)
'
[imapx:D] I/O: '* STATUS "INBOX" (MESSAGES 6714 UIDNEXT 132739 UIDVALIDITY 1107254688 UNSEEN 10 HIGHESTMODSEQ 25512)
D57730 OK Status completed.
'

Note that evolution sees 6703 messages in INBOX while mutt shows 6714 (like the STATUS line).
Comment 8 Yves-Alexis Perez 2014-04-27 11:53:51 UTC
Still happens in 3.12.1
Comment 9 Milan Crha 2014-04-28 14:47:53 UTC
Ah, I see, it's due to the Quick Resync feature. I noticed some complains about that recently, but I didn't see any action on it yet. Workaround is to disable Quick Resync in account properties.
Comment 10 Yves-Alexis Perez 2014-04-29 14:08:24 UTC
Seems that disabling quick resync is a valid workaround, thanks.
Comment 11 Milan Crha 2018-12-07 11:54:18 UTC
While looking on [1] I made several changes which will affect this bug as well, thus I'm closing this in favor of those changes. There were done also various other changes in the QResync code which help with this more generic bug.

Long story short, some notifications went into a wrong folder (selected versus pending to select, while the notifications about folder changes were for the pending folder). The side effect of false notifications and notifications on wrong folder was the reason for [1].

Created commit [2] in eds master (3.31.3+)
Created commit [3] in eds gnome-3-30 (3.30.3+)

[1] https://bugzilla.redhat.com/show_bug.cgi?id=1637916
[2] https://gitlab.gnome.org/GNOME/evolution-data-server/commit/4f5658d59
[3] https://gitlab.gnome.org/GNOME/evolution-data-server/commit/2faf7fc19