Bug 719328 - [IMAPx] Fails to update folder content with QResync

Closes https://bugzilla.gnome.org/show_bug.cgi?id=719328